@@ -12,7 +12,8 @@
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <javafx.version>21.0.5</javafx.version>
+        <javafx.version>25.0.1</javafx.version>
+        <lib.path>\.m2\repository\org\openjfx\</lib.path>
     </properties>
 
     <dependencies>
@@ -21,6 +22,8 @@
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
             <version>${javafx.version}</version>
+            <classifier>win</classifier>
+
         </dependency>
 
         <!-- JavaFX FXML -->
@@ -28,6 +31,8 @@
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
             <version>${javafx.version}</version>
+            <classifier>win</classifier>
+
         </dependency>
         <dependency>
             <groupId>com.microsoft.sqlserver</groupId>
@@ -62,14 +67,6 @@
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
-                <configuration>
-                    <!-- Az sonra oluşturacağımız sınıfın tam adı -->
-                    <mainClass>ymt_odev.Controllers.Main</mainClass>
-                    <options>
-                        <option>--add-modules</option>
-                        <option>javafx.controls,javafx.fxml</option>
-                    </options>
-                </configuration>
             </plugin>
         </plugins>
     </build>
